# Prefab-Releases

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DOCS_INDEX.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  community-prefabs.json  demand.md  prd.md  pyproject.toml  schema.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: deploy-on-merge.yml  pr-check.yml  stale.yml  validate-index.yml
scripts/: check_artifact_url.py  check_duplicates.py  extract_pr_changes.py  local_validate.py  validate_schema.py  verify_artifact.py
